--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,15 @@
-body {
+body, html {
   margin: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height:100%;
+  position: absolute;
   font-family: sans-serif;
+}
+
+#root{
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
